# YadroTestTask

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
config/: ConfigReader.cpp  config.cfg
controller/: ITapeController.cpp  TapeEmulationController.cpp
sorter/: KnowingMemoryCapacitySorter.cpp  TapeEmulationSorter.cpp  TapeMerger.cpp
tapes/: input  output
tapes/temp/: 0-0  0-1  0-2  0-3  0-4  0-5  1-1  2-0  2-1
